Bolded text of Next buttons and fixed result page misalignment

--- a/static/css/testing.css
+++ b/static/css/testing.css
@@ -22,7 +22,8 @@
     margin: 20px;
     width: 20%;
     height: 100px;
-    font-size: 20px
+    font-size: 20px;
+    font-weight: bolder;
 }
 
 html {
